Fix back link visibility

--- a/proto/style.styl
+++ b/proto/style.styl
@@ -1200,6 +1200,10 @@ ul
   color #fff
   overflow-y auto
 
+.profile__header-back
+  @media (min-width: media_small)
+    display none
+
 .view__profile-show
   width 35px
   height @width
